# SimReadyBrowser

./: .gitignore  README.md  launch.bat  main.py  pyproject.toml  requirements.txt
core/: cad2usd_bridge.py  camera_controller.py  ovrtx_renderer.py  physics_collider_discovery.py  physics_controller.py  physics_worker.py  s3_client.py  scene_explorer_model.py  usd_collision_discovery.py  usd_scene_discovery.py
styles/: nvidia_theme.py
tests/: test_asset_browser.py  test_dome_environment.py  test_physics_floor_runtime.py  test_physx_settings.py  test_s3_categories.py  test_s3_resolver_proxy.py  test_scene_explorer_model.py  test_theme.py
tools/: physics_authored_smoke.py  physics_controller_process_smoke.py  physics_discovery_smoke.py
ui/: asset_browser.py  controls_panel.py  main_window.py  viewport_widget.py
