[project]
name = "simready-browser"
version = "1.0.0"
description = "NVIDIA SimReady Browser – OVRTX-powered USD asset viewer"
requires-python = ">=3.10"

dependencies = [
    # Qt UI
    "PyQt5>=5.15",

    # S3 / HTTP
    "requests>=2.31",
    "boto3>=1.34",

    # Numerics (required by OVRTX Python bindings)
    "numpy>=1.24",

    # NVIDIA OVRTX – resolved from the NVIDIA index below
    "ovrtx>=0.2.0",
    "ovphysx>=0.3.7",

    # Optional GPU monitoring
    "pynvml>=11.5",
]

# Tell uv to also look at NVIDIA's PyPI for ovrtx
[[tool.uv.index]]
name     = "nvidia-pypi"
url      = "https://pypi.nvidia.com"
explicit = false
